--- a/serveur-1/package.json
+++ b/serveur-1/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^5.1.1",
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.28.1",
+    "loadash": "^1.0.0",
     "mysql2": "^3.6.3",
     "npm-run-all": "^4.1.5",
     "reflect-metadata": "^0.1.13",
